fix many code whitespace issues
This is a quick that addresses many, but not all, of the whitespace
problems with markdown code blocks and in-line markdown code blocks.

--- a/ioccc.css
+++ b/ioccc.css
@@ -587,8 +587,6 @@ a:active {
 }
 .rightcolumn p, code, pre {
   padding-top: 0;
-  padding-left: 10px;
-  padding-right: 10px;
   padding-bottom: 0;
 }
 
@@ -615,8 +613,6 @@ a:active {
 }
 .footer p, code, pre {
   padding-top: 0;
-  padding-left: 10px;
-  padding-right: 10px;
   padding-bottom: 0;
   color: black;
 }
